--- a/Evaluation/index.html
+++ b/Evaluation/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class ="input__box-container">
         <input id="todolist__input"/>
-        <button id = "submit">Submit</button>
+        <div id = "submit">submit</div>
     </div>
 
     <main class ="content">
